on altervista old

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ function test(){
     sequenceRrc+=rrc+"%2C"
   }
   sequenceRrc=sequenceRrc.substring(0,sequenceRrc.length-3)}
-  url="http://localhost:8006/?rrcs="+sequenceRrc +"&nCpToShow="+nCpToShow+"&ipPrefix="+ipPrefix+"&start="+start+"&end="+end
+  url="http://gdbdiagram.altervista.org/diagram/indexfunzionante.html#/?rrcs="+sequenceRrc +"&nCpToShow="+nCpToShow+"&ipPrefix="+ipPrefix+"&start="+start+"&end="+end
   myFunction(url)
 
 
